--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "deck.gl": "^7.0.9",
     "leaflet": "^1.4.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
@@ -10,9 +11,10 @@
     "react-dom": "^16.7.0",
     "react-leaflet": "^2.2.0",
     "react-leaflet-control": "^2.1.0",
+    "react-map-gl": "^4.1.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
