--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3-array": "^2.2.0",
     "d3-scale-chromatic": "^1.3.3",
     "deck.gl": "^7.0.9",
     "leaflet": "^1.4.0",
