--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "d3-array": "^2.2.0",
+    "d3-scale": "^3.0.0",
     "d3-scale-chromatic": "^1.3.3",
+    "d3-shape": "^1.3.5",
     "deck.gl": "^7.0.9",
     "leaflet": "^1.4.0",
     "prop-types": "^15.6.2",
@@ -16,7 +18,8 @@
     "react-map-gl": "^4.1.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,7 +32,6 @@
   },
   "browserslist": [
     ">0.2%",
-    "not dead",
     "not ie <= 11",
     "not op_mini all"
   ],
