--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "baseui": "^7.5.0",
     "d3-array": "^2.2.0",
     "d3-scale": "^3.0.0",
     "d3-scale-chromatic": "^1.3.3",
@@ -20,6 +21,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
     "react-vis": "^1.11.7",
+    "styletron-engine-atomic": "^1.3.0",
+    "styletron-react": "^5.1.3",
     "underscore": "^1.9.1"
   },
   "scripts": {
