--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/bbox": "^6.0.1",
     "baseui": "^7.5.0",
     "d3-array": "^2.2.0",
     "d3-scale": "^3.0.0",
