--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@turf/bbox": "^6.0.1",
     "@turf/bezier-spline": "^6.0.3",
     "baseui": "^7.5.0",
+    "csv2geojson": "^5.1.1",
     "d3-array": "^2.2.0",
     "d3-scale": "^3.0.0",
     "d3-scale-chromatic": "^1.3.3",
