--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "d3-shape": "^1.3.5",
     "deck.gl": "^7.0.9",
     "leaflet": "^1.4.0",
+    "luxon": "^1.17.3",
     "marked": "^0.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
