--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "coverage": "react-scripts test --env=jsdom --coverage"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,9 +48,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "chromedriver": "^78.0.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
+    "geckodriver": "^1.19.1",
+    "mocha": "^6.2.2",
     "react-test-renderer": "^16.7.0",
+    "selenium-webdriver": "^4.0.0-alpha.5",
     "sinon": "^7.2.3"
   }
 }
