--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "eatlas",
-  "version": "0.1.0",
-  "private": true,
+  "name": "eatlas-letsbeatcovid",
+  "version": "0.1.7",
+  "main": "dist/App.js",
+  "module": "dist/App.js",
   "dependencies": {
     "@turf/bbox": "^6.0.1",
     "@turf/bezier-spline": "^6.0.3",
@@ -10,7 +11,7 @@
     "csv2geojson": "^5.1.1",
     "d3-array": "^2.4.0",
     "d3-format": "^1.4.3",
-    "d3-scale": "^3.2.1",
+    "d3-scale": "r^3.2.1",
     "d3-scale-chromatic": "^1.5.0",
     "d3-shape": "^1.3.7",
     "deck.gl": "^8.1.0",
@@ -34,10 +35,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && mkdir dist && npx babel src/App.js --out-dir dist --copy-files",
     "test": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --env=jsdom --coverage"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      "@babel/preset-env"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -48,6 +55,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-env": "^7.9.0",
     "chromedriver": "^78.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
