--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eatlas-letsbeatcovid",
-  "version": "0.1.7",
+  "version": "0.1.10",
   "main": "dist/App.js",
   "module": "dist/App.js",
   "dependencies": {
@@ -11,13 +11,14 @@
     "csv2geojson": "^5.1.1",
     "d3-array": "^2.4.0",
     "d3-format": "^1.4.3",
-    "d3-scale": "r^3.2.1",
+    "d3-scale": "^3.2.1",
     "d3-scale-chromatic": "^1.5.0",
     "d3-shape": "^1.3.7",
     "deck.gl": "^8.1.0",
     "leaflet": "^1.6.0",
     "luxon": "^1.22.0",
     "marked": "^0.7.0",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.6.2",
     "react": "^16.13.0",
     "react-bootstrap": "^0.32.4",
@@ -29,22 +30,17 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
     "react-vis": "^1.11.7",
+    "regenerator-runtime": "^0.13.5",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
     "underscore": "^1.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf dist && mkdir dist && npx babel src/App.js --out-dir dist --copy-files",
+    "build": "webpack --config ./webpack.config.js --mode production",
     "test": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --env=jsdom --coverage"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-react",
-      "@babel/preset-env"
-    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -56,15 +52,24 @@
   ],
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "chromedriver": "^78.0.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "file-loader": "^6.0.0",
     "geckodriver": "^1.19.1",
     "mocha": "^6.2.2",
     "react-test-renderer": "^16.13.0",
+    "sass-loader": "^8.0.2",
     "selenium-webdriver": "^4.0.0-alpha.7",
-    "sinon": "^7.5.0"
+    "sinon": "^7.5.0",
+    "style-loader": "^1.1.3",
+    "svg-url-loader": "^5.0.0",
+    "webpack-cli": "^3.3.11"
   }
 }
