--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack --config ./webpack.config.js --mode production",
+    "build": "react-scripts build",
     "test": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --env=jsdom --coverage"
@@ -57,19 +57,13 @@
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
     "chromedriver": "^78.0.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "file-loader": "^6.0.0",
     "geckodriver": "^1.19.1",
     "mocha": "^6.2.2",
     "react-test-renderer": "^16.13.0",
-    "sass-loader": "^8.0.2",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "sinon": "^7.5.0",
-    "style-loader": "^1.1.3",
-    "svg-url-loader": "^5.0.0",
     "webpack-cli": "^3.3.11"
   }
 }
