--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.17",
   "main": "dist/App.js",
   "module": "dist/App.js",
-  "homepage" : "/eAtlas",
+  "homepage": "/eAtlas",
   "dependencies": {
     "@turf/bbox": "^6.0.1",
     "@turf/bezier-spline": "^6.0.3",
@@ -16,6 +16,7 @@
     "d3-scale-chromatic": "^1.5.0",
     "d3-shape": "^1.3.7",
     "deck.gl": "^8.1.0",
+    "file-loader": "^6.0.0",
     "leaflet": "^1.6.0",
     "luxon": "^1.22.0",
     "marked": "^0.7.0",
@@ -32,6 +33,7 @@
     "react-scripts": "^3.4.0",
     "react-vis": "^1.11.7",
     "regenerator-runtime": "^0.13.5",
+    "styled-components": "^5.0.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
     "underscore": "^1.9.2"
