--- a/src/location-icon-mapping.json
+++ b/src/location-icon-mapping.json
@@ -1,4 +1,11 @@
 {
+  "marker-0":{
+    "x":0,
+    "y":1210,
+    "width":100,
+    "height":121,
+    "anchorY":121
+  },
   "marker-1":{
      "x":0,
      "y":0,
