--- a/src/location-icon-mapping.json
+++ b/src/location-icon-mapping.json
@@ -6,6 +6,13 @@
     "height":121,
     "anchorY":121
   },
+  "marker-<1":{
+    "x":100,
+    "y":1210,
+    "width":100,
+    "height":121,
+    "anchorY":121
+  },
   "marker-1":{
      "x":0,
      "y":0,
