--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "eatlas",
+  "description": "Turing Geovisualization Engine (TGVE) front-end npm package.",
   "version": "0.1.0",
-  "private": true,
+  "author": "Layik Hama <layik.hama@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/layik/eatlas.git"
+  },
   "dependencies": {
     "@turf/bbox": "^6.0.1",
     "@turf/bezier-spline": "^6.0.3",
@@ -37,7 +43,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "coverage": "react-scripts test --env=jsdom --coverage"
+    "coverage": "react-scripts test --env=jsdom --coverage",
+    "dist": "rm -rf dist && NODE_ENV=production node_modules/.bin/babel src/ --out-dir dist"
   },
   "eslintConfig": {
     "extends": "react-app"
