considerbale cleanup prep for release

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "author": "L Hama <layik.hama@gmail.com>",
   "contributors": [
-    "R Beecham <r.beecham@leeds.ac.uk>",
-    "N Lomax <n.m.lomax@leeds.ac.uk>"
+    "Dr. R Beecham <r.beecham@leeds.ac.uk>",
+    "Dr. N Lomax <n.m.lomax@leeds.ac.uk>"
   ],
   "license": "MIT",
   "repository": {
