--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,8 @@
+# https://docs.npmjs.com/misc/developers#keeping-files-out-of-your-package
 wip/
 R/
 eatlas.Rproj
-data/
 public/
 .vscode/
+nodetes.md
+__snapshots__/
