--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "mocha": "^6.2.2",
     "react-test-renderer": "^16.13.0",
     "selenium-webdriver": "^4.0.0-alpha.7",
-    "sinon": "^7.5.0"
+    "sinon": "^7.5.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack-cli": "^3.3.11"
   }
 }
