--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/layik/eatlas.git"
+    "url": "https://github.com/layik/eatlas.git#npm"
   },
+  "files": [
+    "README.md",
+    "lib/"
+  ],
   "dependencies": {
     "@turf/bbox": "^6.0.1",
     "@turf/bezier-spline": "^6.0.3",
