github actions: build not dist

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,12 +20,15 @@ jobs:
         - name: Clean install dependencies
           run: npm ci
 
+        - name: Clean build
+          run: npm run build
+
         - name: Run deploy script
           run: |
             git config user.name "layik" && git config user.email "layik.hama@gmail.com"
             git checkout --orphan gh-pages
             git --work-tree build add --all
-            git --work-tree dist commit -m 'Deploy'
+            git --work-tree build commit -m 'Deploy'
             git push origin HEAD:gh-pages --force
             rm -r build
             git checkout -f master
