gh-actions: add mapbox api key as secret

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,6 +28,7 @@ jobs:
           run: npm run build
           env:
             CI: false
+            REACT_APP_MAPBOX_ACCESS_TOKEN: ${{secrets.MAPBOX_KEY}}
 
         - name: Run deploy script
           run: |
