gh-actions: add base tag

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,7 +23,6 @@ jobs:
         - name: Prep for https://layik.github.io/eAtlas/ ROOT
           run: |
             sed -i 's/0.0.0.0/layik.github.io\/eAtlas/' src/Constants.js
-
         - name: Clean build
           run: npm run build
           env:
@@ -35,6 +34,7 @@ jobs:
             git config user.name "layik" && git config user.email "layik.hama@gmail.com"
             git checkout --orphan gh-pages
             sed -i 's:\"/static:\"/eAtlas/static:g' build/index.html
+            sed -i 's/<head>/<head><base href=\"https:\/\/layik.github.io\/eAtlas\/\">/' build/index.html
             git --work-tree build add --all
             git --work-tree build commit -m 'Deploy'
             git push origin HEAD:gh-pages --force
