--- a/package.json
+++ b/package.json
@@ -56,5 +56,6 @@
     "react-test-renderer": "^16.13.0",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "sinon": "^7.5.0"
-  }
+  },
+  "homepage": "https://layik.github.io/eAtlas"
 }
