--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,14 +19,12 @@ jobs:
 
         - name: Clean install dependencies
           run: npm ci
-
-        - name: Prep for https://layik.github.io/eAtlas/ ROOT
-          run: |
-            sed -i 's/0.0.0.0/layik.github.io\/eAtlas/' src/Constants.js
+    
         - name: Clean build
           run: npm run build
           env:
             CI: false
+            REACT_APP_DEFAULT_URL: https://raw.githubusercontent.com/visgl/deck.gl-data/master/examples/geojson/vancouver-blocks.json 
             REACT_APP_MAPBOX_ACCESS_TOKEN: ${{secrets.MAPBOX_KEY}}
 
         - name: Run deploy script
