--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "vancouver": "REACT_APP_DEFAULT_URL=https://raw.githubusercontent.com/visgl/deck.gl-data/master/examples/geojson/vancouver-blocks.json react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject",
