--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "leaflet": "^1.6.0",
     "luxon": "^1.22.0",
     "marked": "^0.7.0",
+    "plotly.js": "^1.58.4",
     "prop-types": "^15.6.2",
     "react": "^16.13.0",
     "react-bootstrap": "^0.32.4",
@@ -24,6 +25,7 @@
     "react-leaflet": "^2.6.1",
     "react-leaflet-control": "^2.1.2",
     "react-map-gl": "^4.1.16",
+    "react-plotly.js": "^2.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.0",
