--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,5 +16,5 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: layik/eatlas:latest
+          repository: layik/eatlas/main
           tag_with_ref: true
