--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,7 +1,7 @@
 name: Publish Docker image
 on:
-  push:
-    branches: [ master ]
+  release:
+    types: [published]
 
 jobs:
   push_to_registry:
