--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,9 +1,8 @@
 name: Deploy to github pages
 
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: [published]
 
 jobs:
     gh-pages-deploy:
