--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-plotly.js": "^2.5.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "3.4.0",
     "react-vis": "^1.11.7",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
