Still failing to build in Docker locally

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,18 @@
-node_modules
+**/notes
+**/dist
+**/wip
+**/node_modules
+build
 npm-debug.log
 Dockerfile*
 docker-compose*
 .dockerignore
 .git
 .gitignore
-README.md
+.env*
+README*
 LICENSE
 .vscode
+*.Rds
+*.geojson
+*.csv
