--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-bootstrap": "^0.32.4",
     "react-leaflet": "^2.8.0",
     "react-leaflet-control": "^2.1.2",
-    "react-map-gl": "^6.0.3",
+    "react-map-gl": "5.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.4.0",
