--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eatlas",
-  "version": "0.0.211",
+  "version": "1.0.0-beta.0",
   "private": true,
   "dependencies": {
     "@turf/bbox": "^6.0.1",
