first functioning rollup bundler, separate css + images

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --env=jsdom --coverage",
     "dist": "rm -rf dist && NODE_ENV=production node_modules/.bin/babel src/ --out-dir dist --copy-files --no-copy-ignored",
+    "bundle": "npx rollup -c 'rollup.config.js'",
     "watch": "watch 'npm run dist' ./src",
     "pub-dry": "npm run dist && npm --dry-run publish",
     "pub": "npm run dist && npm publish"
@@ -81,12 +82,19 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-image": "^2.0.6",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "chromedriver": "^78.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "geckodriver": "^1.21.1",
     "mocha": "^8.2.1",
     "react-test-renderer": "^16.14.0",
+    "rollup": "^2.47.0",
+    "rollup-plugin-scss": "^2.6.1",
     "selenium-webdriver": "^4.0.0-alpha.8",
     "sinon": "^7.5.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
