--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
     "selenium-webdriver": "^4.0.0-beta.3",
     "sinon": "^7.5.0"
   },
-  "homepage": "https://layik.github.io/eAtlas"
+  "homepage": "https://tgve.github.io/eAtlas"
 }
