--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "d3-scale-chromatic": "^1.5.0",
     "d3-shape": "^1.3.7",
     "deck.gl": "^8.3.14",
+    "html2canvas": "^1.3.2",
     "luxon": "^1.25.0",
     "marked": "^0.7.0",
     "plotly.js": "^1.58.4",
