--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,8 +1,9 @@
 name: Node CI
 
-on: [push]
-  paths-ignore: 
-    - '**/README.md'
+on: 
+  push:
+    paths-ignore: 
+      - '**/README.*md'
 
 jobs:
   build:
