rollup.config.js: include css and remove failing bits

--- a/package.json
+++ b/package.json
@@ -93,9 +93,10 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "geckodriver": "^1.21.1",
     "mocha": "^8.2.1",
+    "postcss": "^8.3.7",
     "react-test-renderer": "^16.14.0",
     "rollup": "^2.47.0",
-    "rollup-plugin-scss": "^2.6.1",
+    "rollup-plugin-postcss": "^4.0.1",
     "selenium-webdriver": "^4.0.0-alpha.8",
     "sinon": "^7.5.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
