--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "html2canvas": "^1.3.2",
     "luxon": "^1.25.0",
     "marked": "^0.7.0",
-    "plotly.js": "^1.58.4",
     "prop-types": "^15.6.2",
     "react-bootstrap": "^0.32.4",
     "react-leaflet": "^2.8.0",
@@ -52,7 +51,7 @@
     "test": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --env=jsdom --coverage",
-    "dist": "rm -rf dist && NODE_ENV=production node_modules/.bin/babel src/ --out-dir dist --copy-files --no-copy-ignored",
+    "dist": "NODE_ENV=production node_modules/.bin/babel src/ --out-dir dist --copy-files --no-copy-ignored",
     "bundle": "npx rollup -c 'rollup.config.js'",
     "watch": "watch 'npm run dist' ./src",
     "pub-dry": "npm run dist && npm --dry-run publish",
