--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-map-gl": "5.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^4.0.3",
     "react-vis": "^1.11.7",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": ">=5.2.2 < 7",
@@ -91,8 +91,8 @@
     "chromedriver": "^78.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
-    "geckodriver": "^1.21.1",
-    "mocha": "^8.2.1",
+    "geckodriver": "^2.0.4",
+    "mocha": "^9.1.3",
     "postcss": "^8.3.7",
     "react-test-renderer": "^16.14.0",
     "rollup": "^2.47.0",
@@ -101,6 +101,6 @@
     "sinon": "^7.5.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "watch": "^1.0.2",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.9.1"
   }
 }
