--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "eatlas",
+  "name": "@tgve/tgvejs",
   "description": "Turing Geovisualization Engine (TGVE) front-end npm package.",
   "version": "1.3.5-beta.0",
   "main": "dist/index.js",
-  "author": "L Hama (https://github.com/layik)",
+  "author": "TGVE (https://github.com/tgve)",
   "contributors": [
     "Dr. R Beecham",
     "Dr. N Lomax"
@@ -11,7 +11,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/layik/eatlas.git#npm"
+    "url": "https://github.com/tgve/tgvejs.git"
   },
   "files": [
     "README.md",
@@ -32,7 +32,6 @@
     "html2canvas": "^1.3.2",
     "luxon": "^1.25.0",
     "marked": "^4.0.10",
-    "plotly.js": "^1.58.4",
     "prop-types": "^15.6.2",
     "react-bootstrap": "^0.32.4",
     "react-leaflet": "^2.8.0",
