--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "description": "Turing Geovisualization Engine (TGVE) front-end npm package.",
   "version": "1.3.5-beta.0",
   "main": "dist/index.js",
-  "author": "L Hama (https://github.com/layik)",
+  "author": "Layik Hama (https://github.com/layik)",
   "contributors": [
-    "Dr. R Beecham",
-    "Dr. N Lomax"
+    "Roger Beecham",
+    "Nik Lomax",
+    "Lydia France",
+    "Nick Barlow",
+    "Roly Perera"
   ],
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/layik/eatlas.git#npm"
+    "url": "https://github.com/tgve/tgvejs"
   },
   "files": [
     "README.md",
