--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "html2canvas": "^1.3.2",
     "luxon": "^1.25.0",
     "marked": "^4.0.10",
-    "plotly.js": "^1.58.4",
     "prop-types": "^15.6.2",
     "react-bootstrap": "^0.32.4",
     "react-leaflet": "^2.8.0",
@@ -43,7 +42,6 @@
     "react-map-gl": "5.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.4.4",
     "react-vis": "^1.11.7",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": ">=5.2.2 < 7",
@@ -95,13 +93,14 @@
     "geckodriver": "^2.0.4",
     "mocha": "^9.1.3",
     "postcss": "^8.3.7",
+    "react-scripts": "^5.0.0",
     "react-test-renderer": "^16.14.0",
     "rollup": "^2.47.0",
     "rollup-plugin-postcss": "^4.0.1",
     "selenium-webdriver": "^4.0.0-alpha.8",
     "sinon": "^7.5.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "watch": "^1.0.2",
+    "uglifyjs-webpack-plugin": "^1.1.2",
+    "watch": "^0.13.0",
     "webpack-cli": "^4.9.1"
   }
 }
