--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "coverage": "react-scripts test --env=jsdom --coverage",
     "dist": "node_modules/.bin/babel src/ --out-dir dist --copy-files --no-copy-ignored",
     "bundle": "npx rollup -c 'rollup.config.js'",
-    "watch": "watch 'yarn run dist' ./src",
+    "watch": "watch --wait=1 'yarn run dist' ./src",
     "pub-dry": "yarn run dist && yarn --dry-run publish",
     "pub": "yarn run dist && yarn publish"
   },
