--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "underscore": "^1.12.0"
   },
   "scripts": {
+    "test-fresh": "yarn add react && yarn add react-dom && yarn test",
     "test": "react-scripts test --updateSnapshot",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --env=jsdom --coverage",
