--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
     "geckodriver": "^2.0.4",
     "mocha": "^9.1.3",
     "postcss": "^8.3.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "^16.14.0",
     "rollup": "^2.47.0",
     "rollup-plugin-postcss": "^4.0.1",
