--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "underscore": "^1.12.0"
   },
   "scripts": {
-    "test": "yarn install --check-files && react-scripts test --updateSnapshot",
+    "test": "yarn install --check-files && react-scripts test",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --env=jsdom --coverage",
     "dist": "node_modules/.bin/babel src/ --out-dir dist --copy-files --no-copy-ignored",
