--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "underscore": "^1.12.0"
   },
   "scripts": {
-    "test": "yarn install --check-files && react-scripts test",
+    "test": "yarn install --check-files && react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage .",
     "dist": "node_modules/.bin/babel src/ --out-dir dist --copy-files --no-copy-ignored",
@@ -87,10 +87,12 @@
     "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@testing-library/react": "^12.1.3",
     "chromedriver": "^78.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "geckodriver": "^2.0.4",
+    "jest-environment-jsdom-sixteen": "^2.0.0",
     "mocha": "^9.1.3",
     "postcss": "^8.3.7",
     "react": "^17.0.2",
