--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "scripts": {
     "test": "yarn install --check-files && react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test-debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage .",
     "dist": "node_modules/.bin/babel src/ --out-dir dist --copy-files --no-copy-ignored",
@@ -87,6 +88,7 @@
     "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "chromedriver": "^78.0.1",
     "enzyme": "^3.11.0",
