--- a/package.json
+++ b/package.json
@@ -90,9 +90,9 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
-    "chromedriver": "^78.0.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "chromedriver": "^99.0.0",
     "geckodriver": "^2.0.4",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "mocha": "^9.1.3",
