--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@turf/bbox": "^6.3.0",
     "@turf/bezier-spline": "^6.2.0",
+    "@turf/boolean-contains": "^6.5.0",
     "@turf/centroid": "^6.2.0",
     "baseui": "^10.3.0",
     "csv2geojson": "^5.1.1",
@@ -90,9 +91,9 @@
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
-    "enzyme": "^3.11.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "chromedriver": "^99.0.0",
+    "enzyme": "^3.11.0",
     "geckodriver": "^2.0.4",
     "jest-environment-jsdom-sixteen": "^2.0.0",
     "mocha": "^9.1.3",
