--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "chromedriver": "^99.0.0",
     "geckodriver": "^2.0.4",
     "jest-environment-jsdom-sixteen": "^2.0.0",
+    "mutationobserver-shim": "^0.3.7",
     "postcss": "^8.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
