actions: run coverage only

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,11 +25,13 @@ jobs:
     - name: npm install
       run: npm i
       env:
-        CI: true
+        CI:
+
     - name: install react & react-dom
       run: npm i react react-dom
-    - name: npm test
-      run: npm test && npm run coverage
+
+    - name: Test
+      run: npm run coverage
 
     - name: Codecov
       uses: codecov/codecov-action@v2
