--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "scripts": {
     "lint": "eslint --ignore-path .gitignore .",
-    "test": "yarn install --check-files && react-scripts test --env=jest-environment-jsdom-sixteen",
+    "test": "yarn install --check-files && react-scripts test",
     "test-debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject",
     "coverage": "react-scripts test --coverage .",
@@ -93,7 +93,6 @@
     "@testing-library/react": "^12.1.3",
     "chromedriver": "^99.0.0",
     "geckodriver": "^2.0.4",
-    "jest-environment-jsdom-sixteen": "^2.0.0",
     "mutationobserver-shim": "^0.3.7",
     "postcss": "^8.3.7",
     "react": "^17.0.2",
