--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "@turf/centroid": "^6.5.0",
     "baseui": "^10.3.0",
     "csv2geojson": "^5.1.2",
-    "d3-array": "^2.9.1",
-    "d3-format": "^1.4.5",
-    "d3-scale": "^3.2.3",
-    "d3-scale-chromatic": "^1.5.0",
-    "d3-shape": "^1.3.7",
+    "d3-array": "^3.2.1",
+    "d3-format": "^3.1.0",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "deck.gl": "^8.3.14",
     "html2canvas": "^1.3.2",
-    "luxon": "^1.25.0",
+    "luxon": "^3.2.0",
     "prop-types": "^15.6.2",
     "react-map-gl": "5.2.1",
     "react-router": "^4.3.1",
@@ -103,5 +103,10 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "watch": "^0.13.0",
     "webpack-cli": "^4.9.1"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "!node_modules/"
+    ]
   }
 }
